Added user preference styling to new UI elements
